test/sema/positive/struct01.impala
struct S {
}

fn f() -> S {
   S {}
}
