test/sema/negative/struct02.impala
struct S {
    x: bool
}

fn f() -> S {
   S { x: 5 }
}
